# claude-super-setup

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  PROJECT_ANCHOR.md  README-taskr.md  README.md  UPGRADING.md  VPS-SETUP.md  env.example  install.sh  tasks.json  tasks.json.bak.enterprise-sprint5  uninstall.sh
.claude/: pipeline-checkpoint.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
agent_docs/: architecture.md  ci-standards.md  claude-agent-sdk.md  dev-environment-manual.md  security.md  testing.md
agents/: catalog.json
benchmarks/: evolution-log.jsonl  history.jsonl
claude_a2a/: __main__.py  client.py  config.py  notify.py  pyproject.toml  server.py
claude_a2a/claude_a2a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
claude_a2a/executors/: claude_executor.py  gemini_executor.py  manus_executor.py  router.py
commands/: a11y-audit.md  a2a.md  adr.md  agent-import.md  agent-search.md  api-docs.md  api-endpoint.md  api-spec.md  auto-build-all.md  auto-build.md  auto-dev.md  auto-develop.md  auto-fix-review.md  auto-plan.md  auto-ship.md  auto-tasks.md  benchmark-status.md  benchmark.md  brainstorm.md  budget-status.md  build-page.md  build.md  capture-preview.md  changelog.md  check.md  checkpoint.md  ci-setup.md  cleanup.md  clone-app.md  code-review.md  codegen-wiki.md  community-validate.md  compare.md  consolidate.md  coordinate.md  cursor-setup.md  darwin.md  dashboard.md  db-migrate.md  debug.md  (+77 more)
components/: Button.tsx  UserCard.tsx
config/: .mcp.json  CLAUDE.md  mcp.json.tmpl  model-routing.json  (+2 more)
(+505 files in other folders)
